<resources>
    <string name="app_name">Everis_Cartoes</string>
    <string name="hint_user_name">Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="txt_btn_login">Login</string>
    <string name="txt_title_login">Everis Cartões</string>
    <string name="txt_cadastrar">Ainda não é cadastrado?</string>
    <string name="msg_empity_field">Os campos precisam ser preenchidos</string>
    <string name="title_splash_screen">Everis Cartões</string>
    <string name="biometric_user_password">Usar e-mail e senha</string>
    <string name="biometric_title">Login por Biometria</string>
    <string name="biometric_auth_fail">Authentication failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_code_card">code:</string>
    <string name="title_date_card">validade:</string>
    <string name="title_card">Cartão</string>
    <string name="title_fragment_cartoes">Cartoes</string>
</resources>