<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="190dp"
        android:background="@color/black">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_card"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            android:layout_marginTop="@dimen/_18dp"
            android:layout_marginStart="@dimen/_18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Jose Roberto de Moura"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_18sp"
            android:layout_marginStart="@dimen/_10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18sp"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            tools:text="1111 2222 3333 4444"
            app:layout_constraintTop_toBottomOf="@+id/name_user"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_date_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_date_card"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/date_card"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/date_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18sp"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_20dp"
            tools:text="20/25"
            app:layout_constraintTop_toBottomOf="@+id/card_number"
            app:layout_constraintStart_toEndOf="@+id/title_date_card"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_code_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_code_card"
            android:layout_marginEnd="@dimen/_10dp"
            android:layout_marginStart="70dp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/date_card"
            app:layout_constraintEnd_toStartOf="@+id/code_card"
            app:layout_constraintBottom_toBottomOf="@+id/code_card"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/code_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18sp"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            tools:text="123"
            app:layout_constraintTop_toBottomOf="@+id/card_number"
            app:layout_constraintStart_toEndOf="@+id/title_code_card"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>